--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "request-header-parser-api",
-  "version": "1.0.0",
-  "description": "Request Header Parser Microservice. Free Code Camp Project.",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "minhkashyu",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.14.0"
-  }
+    "name": "request-header-parser-api",
+    "version": "1.0.0",
+    "description": "Request Header Parser Microservice. Free Code Camp Project.",
+    "main": "server.js",
+    "engines": {
+        "node": "6.11.1"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "minhkashyu",
+    "license": "MIT",
+    "dependencies": {
+        "express": "^4.14.0"
+    }
 }
